# blog

./: .gitignore  .pre-commit-config.yaml  .vale.ini  404.md  CNAME  _config.ts  blog.md  config.toml  deno.json  index.html  index.md  projects.md  pyproject.toml  robots.txt  styles.css
.github/workflows/: cd.yml
_includes/css/: main.css
_includes/layouts/: index.vto  main.vto  post.vto
_includes/templates/: error.vto  footer.vto  header.vto  posts.vto
about/: index.html
content/: 20250703--working-with-settings.md  20250706--testing-filesystem-operations.md  _index.md  about.md  first.md
css/: syntax-theme-dark.css
managing-settings-in-python-projects/: index.html
posts/: _data.yml  building-tree-sitter-langs-Emacs.md  managing-grouping-files-python.md  py-find-unused-deps.md  python-getters-setters.md  python-setting-up-tools.md  show-conda-pkg-sizes.md  write-a-vm.md
public/: index.html  rss.xml  sitemap.xml
public/about/: index.html
public/css/: main.css
public/managing-settings-in-python-projects/: index.html
sass/: main.scss
source/: conf.py  index.rst  style.py
source/_ext/: blogroll.py
source/_static/: custom.css  juliamono.css  luciole.css
source/posts/: 20250611--testing-filepath-operations__python_filesystem.rst
static/: CNAME
static/css/: main.css
styles/config/vocabularies/Blog/: accept.txt
templates/: about.html  base.html  blog-page.html  blog.html  robots.txt
tests/: test_blogroll.py
