[project]
name = "blog"
version = "2025.06.07"

description = "Nathan's blog."
readme = "README.rst"
authors = [ { name = "Nathan Furnal" } ]
requires-python = ">=3.13"
classifiers = [
  # See: https://pypi.org/classifiers/
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Text Editors :: Emacs",
]

dependencies = [
  "sphinx>=8.2.3",
]

urls.Homepage = "www.natfu.be"
urls.Repository = "https://github.com/Nathan-Furnal/blog.git"

[dependency-groups]
dev = [
  "pre-commit>=4.2",
  "sphinx-autobuild>=2024.10.3",
]

[tool.pyproject-fmt]
indent = 2
