[project]
name = "blog"
version = "2025.06.07"

description = "Nathan's blog."
readme = "README.rst"
authors = [ { name = "Nathan Furnal" } ]
requires-python = ">=3.13"
classifiers = [
  # See: https://pypi.org/classifiers/
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Text Editors :: Emacs",
]

dependencies = [
  "furo>=2024.8.6",
  "pygments>=2.19.1",
  "sphinx>=8.2.3",
  "sphinx-copybutton>=0.5.2",
]

urls.Homepage = "https://www.natfu.be"
urls.Repository = "https://github.com/Nathan-Furnal/blog.git"

[dependency-groups]
dev = [
  "pre-commit>=4.2",
  "sphinx-autobuild>=2024.10.3",
]
lint = [
  "basedpyright>=1.29.2",
  "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88
indent-width = 4

lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # Missing trailing comma
  "D100",   # Missing docstring in public module
  "D101",   # Missing docstring in public class
  "D103",   # Missing docstring in public function
  "D203",   # No blank line before class docstring
  "D213",   # No blank line for docstring first line
  "INP001", # No implicit pkg warning
]
lint.per-file-ignores."tests/**" = [
  "ANN201", # Don't annotate type for tests
  "S101",   # Assertions are valid in tests
]

[tool.pyproject-fmt]
indent = 2

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.basedpyright]
include = [ "source" ]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
